# flamecell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/flamecell/: __init__.py  app.py  download_map.py  flamecell.py  rules.py  sim_utils.py
src/flamecell/maps/: source.txt
tests/: test_flamecell.py  test_rules.py  test_simutils.py
