[tool.poetry]
name = "flamecell"
version = "0.2.0"
description = "A python package to simulate the forest fire using cellular automaton"
authors = ["YiyangZhu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"  # adjust version as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
