[tool.poetry]
name = "flamecell"
version = "0.3.0"
description = "A python package to simulate the forest fire using cellular automaton"
authors = ["YiyangZhu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
matplotlib = "^3.8"
requests = "^2.32"
rasterio = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"  # adjust version as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]